servicegra.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: ml
spec:
  selector:
    app: grafana
  ports:
    - name: web
      port: 3000
      targetPort: 3000
