serviceprom.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: ml
spec:
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
      name: web
