routegra.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
  namespace: ml
spec:
  to:
    kind: Service
    name: grafana
  port:
    targetPort: web
  tls:
    termination: edge
